--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
             </nav>
 
         </header>
-        <div class="container-fluid">
+        <div class="container-fluid line--container">
             <div class="line--red"></div>
         </div>
 
