--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <header class="container">
             <div class="row justify-content-between py-4">
                 <div class="col-lg-3 col-md-12 d-flex justify-content-center align-items-center">
-                    <a href="#"><img class="img-fluid" src="assets/imgs/logo.png" alt="Super Sports Logo"></a>
+                    <a href="index.html"><img class="img-fluid" src="assets/imgs/logo.png" alt="Super Sports Logo"></a>
                 </div>
                 <div class="col-lg-6 col-md-12 d-flex justify-content-center justify-content-lg-between align-items-center">
                     <a class="hidden-md-down" href="tel:+4522660077"><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;&nbsp;+45&nbsp;22&nbsp;66&nbsp;00&nbsp;77</a>
@@ -38,7 +38,7 @@
                 <ul class="col-lg-8 d-flex justify-content-lg-between align-items-lg-center navbar-nav">
                     <li class="nav-item active">
                         <div class="dropdown">
-                            <a href="#">HOME</a>
+                            <a href="index.html">HOME</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -86,7 +86,7 @@
                     </li>
                     <li class="nav-item">
                         <div class="dropdown">
-                            <a href="#">SUPPORT</a>
+                            <a href="contact.html">CONTACT</a>
                         </div>
                     </li>
                 </ul>
@@ -169,9 +169,9 @@
                             <i class="fa fa-star-half-o" aria-hidden="true"></i>
                             <i class="fa fa-star-o" aria-hidden="true"></i>
                         </div>
-                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <a href="detail.html"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
                         <div class="product--description px-3 mt-3 pb-2">
-                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
                             <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
                         </div>
@@ -202,9 +202,9 @@
                             <i class="fa fa-star-half-o" aria-hidden="true"></i>
                             <i class="fa fa-star-o" aria-hidden="true"></i>
                         </div>
-                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <a href="detail.html"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
                         <div class="product--description px-3 mt-3 pb-2">
-                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
                             <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
                         </div>
@@ -235,9 +235,9 @@
                             <i class="fa fa-star-half-o" aria-hidden="true"></i>
                             <i class="fa fa-star-o" aria-hidden="true"></i>
                         </div>
-                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <a href="detail.html"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
                         <div class="product--description px-3 mt-3 pb-2">
-                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
                             <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
                         </div>
@@ -268,9 +268,9 @@
                             <i class="fa fa-star-half-o" aria-hidden="true"></i>
                             <i class="fa fa-star-o" aria-hidden="true"></i>
                         </div>
-                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <a href="detail.html"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
                         <div class="product--description px-3 mt-3 pb-2">
-                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
                             <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
                         </div>
@@ -301,9 +301,9 @@
                             <i class="fa fa-star-half-o" aria-hidden="true"></i>
                             <i class="fa fa-star-o" aria-hidden="true"></i>
                         </div>
-                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <a href="detail.html"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
                         <div class="product--description px-3 mt-3 pb-2">
-                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
                             <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
                         </div>
@@ -334,9 +334,9 @@
                             <i class="fa fa-star-half-o" aria-hidden="true"></i>
                             <i class="fa fa-star-o" aria-hidden="true"></i>
                         </div>
-                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <a href="detail.html"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
                         <div class="product--description px-3 mt-3 pb-2">
-                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
                             <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
                         </div>
@@ -367,9 +367,9 @@
                             <i class="fa fa-star-half-o" aria-hidden="true"></i>
                             <i class="fa fa-star-o" aria-hidden="true"></i>
                         </div>
-                        <a href="#"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
+                        <a href="detail.html"><img class="img-fluid" src="assets/imgs/products/shoe.jpg" alt="shoe"></a>
                         <div class="product--description px-3 mt-3 pb-2">
-                            <a href="#">GEL-FUJITRABUCO 5 G-Tx</a>
+                            <a href="detail.html">GEL-FUJITRABUCO 5 G-Tx</a>
                             <h4 class="my-1">RUNNING SHOE</h4>
                             <p>God og robust terrænløbesko med GORE-</br>TEX-membran. Overdel i let mesh og</br>sål med affjedring både i hæl og forfod....</p>
                         </div>
@@ -390,7 +390,6 @@
                     </div>
                     <button class="py-2" type="button" name="buy">BUY NOW</button>
                 </div>
-
 
             </div>
         </main>
@@ -403,7 +402,7 @@
                             <h3>SIGN UP FOR EXCLUSIVE SALES AND PRODUCT NEWS</h3>
                         </div>
                         <div class="col-lg-4 hidden-md-down">
-                            <form class="d-flex justify-content-between">
+                            <form id="signup" class="d-flex justify-content-between">
                                 <input class="px-3" type="text" name="email" placeholder="LOREM@IPUSM.COM">
                                 <button class="ml-3 px-4 py-3" type="submit" form="signup" name="submit">SIGN UP</button>
                             </form>
